<?xml version="1.0" encoding="utf-8"?>
<resources>   
	<string name="app_name">MU-WiFi Autologin</string>
	<string name="pref_login_now">Login Now!</string>
	<string name="pref_logout_now">Logout Now!</string>
	<string name="pref_preferences">Preferences</string>
	<string name="pref_username">Username</string>
	<string name="pref_username_summary">Click to set username</string>
	<string name="pref_password">Password</string>
	<string name="pref_password_summary">Click to change password</string>
	<string name="pref_enabled">Enabled</string>
	<string name="pref_enabled_summary">Enable autologin to MU-WiFi</string>
	<string name="pref_error_notify_title">Error Notification</string>
	<string name="pref_error_notify_sound">Sound</string>
	<string name="pref_error_notify_vibrate">Vibration</string>
	<string name="pref_error_notify_lights">Lights</string>
	<string name="pref_error_notify_none">None</string>
	<string name="pref_error_notify_deliminator">,\u0020</string> <!-- A non-encoded trailing space will be removed -->
	<string name="pref_toast_notify_title">Success Notification</string>
	<string name="pref_toast_notify_success">Success</string>
	<string name="pref_toast_notify_not_required">Not Required</string>
	<string name="pref_language_title">Language</string>
	<string name="pref_about">About</string>
	<string name="pref_version_summary">Version %s</string>
	<string name="pref_website">Visit Website</string>
	<string name="pref_website_summary">Usage and troubleshooting</string>
	<string name="pref_author">Contact Author</string>
	<string name="pref_author_summary">pawitp @ MUICT9</string>
	<string name="wifi_disabled">WiFi needs to be enabled to use autologin.</string>
	<string name="no_login_required">No login required.</string>
	<string name="login_successful">Automatic login to MU-WiFi successful.</string>
	<string name="logout_successful">Logout successful.</string>
	<string name="notify_login_ongoing_title">MU-WiFi Autologin</string>
	<string name="notify_login_ongoing_text_determine_requirement">Determining if login is required…</string>
	<string name="notify_login_ongoing_text_logging_in">Logging in…</string>
	<string name="notify_logout_ongoing_text">Logging out…</string>
	<string name="notify_login_error_title">Unable to login to MU-WiFi</string>
	<string name="notify_logout_error_title">Unable to logout from MU-WiFi</string>
	<string name="notify_login_error_text">Click to retry.</string>
	<string name="notify_request_wifi_ongoing_text">Requesting Wi-Fi communication…</string>
	<string name="notify_request_wifi_error_text">Unable to request Wi-Fi communication</string>
	<string name="notify_request_wifi_connected_title">Connected to %s</string>
	<string name="notify_request_wifi_connected_text">Click here to login.</string>
	<string name="login_shortcut">MU-WiFi Login</string>
	<string name="logout_shortcut">MU-WiFi Logout</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>
