<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
	
	

<PreferenceCategory android:title="Preferences"><CheckBoxPreference
		android:defaultValue="false"
		android:key="enabled" android:title="@string/pref_enabled" android:summary="@string/pref_enabled_summary"/><EditTextPreference
		android:key="username" android:title="@string/pref_username" android:summary="@string/pref_username_summary"/><EditTextPreference
		android:key="password"
		android:password="true" android:title="@string/pref_password" android:summary="@string/pref_password_summary"/></PreferenceCategory>
<PreferenceCategory android:title="About"><Preference android:key="version" android:title="@string/app_name" android:summary="@string/pref_version_summary"></Preference><Preference android:summary="@string/pref_author_summary" android:title="@string/pref_author"></Preference>
</PreferenceCategory>
</PreferenceScreen>